# aiothrift

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README.rst  ci-requirements.txt  client.py  pingpong.thrift  pyproject.toml  requirements.txt  server.py  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
aiothrift/: __init__.py  connection.py  errors.py  log.py  pool.py  processor.py  protocol.py  server.py  transport.py  util.py
docs/: Makefile  api.rst  conf.py  examples.rst  forward.rst  index.rst  license.rst  quickstart.rst  tutorial.rst
examples/: client.py  pool.py  server.py
tests/: conftest.py  server.py  test.thrift  test_connection.py  test_pool.py
