[tool.poetry]
name = "aiothrift"
version = "0.2.6"
description = "Async Thrift server and client"
authors = ["Ryan Wang <hwwangwang@gmail.com>"]
license = "MIT"

keywords = ["thrift", "thriftpy", "asyncio"]
readme = "README.rst"

homepage = "http://github.com/moonshadow/aiothrift/"
repository = "http://github.com/moonshadow/aiothrift/"
documentation = "https://aiothrift.readthedocs.org/"

classifiers = [
          'License :: OSI Approved :: MIT License',
          'Programming Language :: Python',
          'Programming Language :: Python :: 3',
          'Programming Language :: Python :: 3.7',
          'Programming Language :: Python :: 3.8',
          'Environment :: Web Environment',
          'Intended Audience :: Developers',
          'Topic :: Software Development',
          'Topic :: Software Development :: Libraries',
]



[tool.poetry.dependencies]
python = "^3.7"
async-timeout = ">=3.0.1,<5.0.0"
thriftpy2 = "^0.4.9"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-asyncio = "^0.15.1"
sphinx = "^4.0.3"
black = "^21.6b0"
flake8 = "^3.7.9"
pre-commit = "^2.13.0"

[tool.black]
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

